# autograder

./: .env.production.example  .gitignore  CLAUDE.md  HANDOFF.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  VERIFICATION.md  deploy-systemd.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  start-worker.sh
autograder-back/: .env.example  CLAUDE.md  CONFIG.md  Dockerfile  Dockerfile.dev  Dockerfile.sandbox  Dockerfile.worker  GEMINI.md  README.md  alembic.ini  create_admin.py  docker-compose.yml  main.py  pyproject.toml  seed_products.py
autograder-back/alembic/: env.py
autograder-back/app/: __init__.py  celery_app.py  config.py  course_mapping.py  database.py  discord_bot.py  redis_client.py  tasks.py
autograder-back/scripts/: setup_product_access_rules.py
autograder-back/services/: __init__.py
autograder-back/tests/: conftest.py  test_admin_events_router.py  test_admin_settings_router.py  test_admin_students.py  test_admin_templates_router.py  test_auth_router.py  test_bulk_send_task.py  test_class_router.py  test_content_extractor.py  test_discord_bot.py  test_encryption.py  test_enrollment_service.py  test_evolution.py  test_evolution_dev.py  test_exercise_router.py  test_file_storage.py  test_grade_llm_first.py  test_grading_logic.py  test_hotmart_buyer_sync.py  test_hotmart_integration.py  test_lifecycle_service.py  test_lifecycle_templates.py  test_manychat_integration.py  test_manychat_tag_sync.py  test_message_rewriter.py  test_messaging_router.py  test_messaging_schemas.py  test_non_code_grading.py  test_onboarding_router.py  (+9 more)
(+248 files in other folders)
